Change title and favicon in index.html
Updated the title and favicon for the HTML document, and ensured proper formatting and structure.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Formatter</title>
+    <link rel="icon" type="image/x-icon" href="https://images.scalebranding.com/retro-robot-cartoon-mascot-logo-0ebb2526-20cf-4210-a018-06592dce847b.png">
+    <title>DS Tokens Formatter</title>
     <style>
         /* ---  Modern Theme Styling --- */
         :root {
@@ -264,4 +265,5 @@
 
     </script>
 </body>
+
 </html>
