Add favicon and clean up index.html
Added a favicon link and improved HTML structure.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png" type="https://images.mybrandnewlogo.com/articles/colors/22222f4a69a808677c1bcb21ac6796c5c9ee26430-480x360-center.jpg">
     <title>Style Formatter</title>
     <style>
         /* ---  Modern Theme Styling --- */
@@ -293,3 +294,4 @@
     </script>
 </body>
 </html>
+
